<resources>
    <string name="app_name">HabitTrainer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="begin_new_habit">Begin New Habit...</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="enter_description">Enter description</string>
    <string name="select_image">Select Image</string>
    <string name="save_habit">Save Habit</string>
    <string name="error_stuff">Error Stuff</string>
</resources>
